Closed Bug 1616851 Opened 4 years ago Closed 4 years ago

Name calculation for gmail message lacks header info (unlike in Chromium)

Categories

(Core :: Disability Access APIs, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: jdiggs, Assigned: MarcoZ)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

Step to reproduce:

  1. Open a message in gmail and examine the accessible name of the associated object with the listitem role using Firefox's accessibility inspector.

Expected results: The header info (e.g. sender and recipient) would be included in the listitem name along with the body of the message.

Actual results: The header info (e.g. sender and recipient) are absent from the listitem role; on the message body is used as the name:

app='Firefox'
name='This is a test. Tests are neat! Reply Forward'
role='list item' 

Compare with Chromium which includes the information:

app='Chromium'
name='Joanmarie Diggsjoanmarie.diggs@gmail.com 3:16 PM (0 minutes ago) Not starred Reply More to me Show details This is a test. Tests are neat! Reply Forward'
role='list item' 

Impact: When Orca users press "n" (the Gmail-provided command to move to the next message in a thread), Orca doesn't present the header information; just the message body. Orca users see this as a bug. However, Orca is doing the right thing in Chromium because the header info is included in the name.

Notes: I don't see anything else (e.g. an accessible relation) connecting the list item with the header info in the accessibility tree; it's just a descendant.

The tbody in the header table gets a role of grouping because it has display: block. We don't allow name from subtree for grouping, even when calculating the name for some other accessible (in this case, the list item). We need to set eNameFromSubtreeIfReqRule for grouping. I don't think that should break anything...

Note that this change would also fix this:
data:text/html,<div id="g" role="group">label</div><button aria-labelledby="g">
Right now, the button gets no name.

Blocks: namea11y
Priority: -- → P2
Assignee: nobody → mzehe
Status: NEW → ASSIGNED
Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/25db1981e38a
For grouping, calculate name from subtree if requested by other accessible object, r=Jamie
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Regressions: 1650462
See Also: → 1790709
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: