Bug 1616851 - For grouping, calculate name from subtree if requested by other accessible object, r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D63619

--HG--
extra : moz-landing-system : lando